ocfl-java-itest/src/test/resources/invalid-repos/bad-logical-paths/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v5/inventory.json.sha512
e5775110edb4ac750d6efbe138122700e40e71bf63ce306163e7ede46bab3602650ab3e570b0f3362af6756c55bd57e65e74964cd2ba7e3aa24d660c987d4ee5  inventory.json
